fixing twitter share buttons
Added missing classes that hook into JS

--- a/thanks.html
+++ b/thanks.html
@@ -32,7 +32,7 @@
 								<br class="clear">
 							</div>
 
-							<a class="fb-share button-share-medium bg-facebook-icon bg-facebook-color margin-bottom-none" href="/share/link?type=fb&amp;page_name={{page.name}}&amp;action_id={{action.id}}&amp;akid={{akid}}">{% filter ak_text:"general_share_on_fb" %}Share on Facebook{% endfilter %}</a>
+							<a class="fb-share button-share-facebook button-share-medium bg-facebook-icon bg-facebook-color margin-bottom-none" href="/share/link?type=fb&amp;page_name={{page.name}}&amp;action_id={{action.id}}&amp;akid={{akid}}">{% filter ak_text:"general_share_on_fb" %}Share on Facebook{% endfilter %}</a>
 						</div>
 					</div>
 					<div class="twitter-share">
@@ -41,7 +41,7 @@
 						</div>
 						<div class="box box-big bg-white border">
 							<textarea class="bg-ltgray border strong p" readonly>{{ page.followup.twitter_message }}</textarea>
-							<p><a class="button-share-medium bg-twitter-icon bg-twitter-color no-margin-bottom"href="/share/link?type=tw&amp;page_name={{page.name}}&amp;action_id={{action.id}}&amp;akid={{akid}}">{% filter ak_text:"general_tweet" %}Tweet{% endfilter %}</a></p>
+							<p><a class="button-share-medium button-share-twitter bg-twitter-icon bg-twitter-color no-margin-bottom"href="/share/link?type=tw&amp;page_name={{page.name}}&amp;action_id={{action.id}}&amp;akid={{akid}}">{% filter ak_text:"general_tweet" %}Tweet{% endfilter %}</a></p>
 						</div>
 					</div>
 						</div>
