--- a/letter.html
+++ b/letter.html
@@ -1,76 +1,93 @@
-{% extends "./wrapper.html" %}
-{% load actionkit_tags %}
+{% extends "./wrapper.html" %}{% load actionkit_tags %}
+
+
 {% block content %}
 
-<div id="page-header">
-<h2 id="page-title" class="">{{ page.title }}</h2>
-</div>
-
-{% autoescape off %}
-<div id="content">
-<div class="about letter-about">{% include_tmpl form.about_text %}</div>
-</div>
-{% endautoescape %}
-
-
-<script type="text/javascript">
-$(document).ready(function(){ 
-var letter = $("#letter-content");
-$('.add-to-letter').on('click', function(){
-var letterAddText = $(this).text();
-var letterText = $(letter).val();
-var newLetterText = letterText + "\n\n" + letterAddText;
-$(letter).val(newLetterText).scrollTop(99999);
-});
-});
-</script>
-
-
-{% if page.custom_fields.page_is_inactive %}
-<div id="page-inactive">
-{% autoescape off %}
-{{ page.custom_fields.page_is_inactive }}
-{% endautoescape %}
-</div>
-{% else %}
-<form class="action_form ak-form" name="act" method="POST" action="/act/" accept-charset="utf-8">
-<div class="letter">
-<div class="letter-intro">
-{% if form.statement_leadin %}{% include_tmpl form.statement_leadin %}
-{% else %}
-<strong>Customize and send your letter:</strong>
-{% endif %}
-</div>
-<textarea title="You can personalize this letter by editing the text." class="letter-text" id="letter-content" name="action_comment">{% include_tmpl form.letter_text  %}</textarea>
-</div>
-
-<div id="form">
-
-{% if page.custom_fields.form_text_above_form %}
-{% autoescape off %}
-<div id="form-intro">{{ page.custom_fields.form_text_above_form }}</div>
-{% endautoescape %}
-{% endif %}
-
-<input type="hidden" name="utf8" value="&#x2714;" />
-
-{% include "./user_form_wrapper.html" %}
-<!-- div class="input textarea comment"><label class="comment" for="id_comment">Your Personal Comment (OPTIONAL)</label><textarea id="id_comment" name="action_comment" class="comment" rows="3" cols="70"></textarea>
-</div -->
-<input type="hidden" name="page" value="{{ page.name }}" />
-<input type="submit" class="submit" value="{% if page.custom_fields.form_submit_button_text %}{{ page.custom_fields.form_submit_button_text }}{% else %}{% filter ak_text:"letter_submit_button" %}Add Your Name{% endfilter %}{% endif %}" />
-<input type="hidden" name="want_progress" value="1" />
-
-</div>
-{% spaceless %}
-<div id="form-secondary">
-{% include "./progress_meter.html" %}
-{% include "./social_plugins.html" %}
-{% endspaceless %}
-</form>
-{% endif %}
-
-
-<br class="clear" />
-
-{% endblock %}
+<section id="action-lead" class="section action-lead title-section width-medium padding-medium bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
+	<div class="section-inner">
+		<div id="action-header" class="{% if page.custom_fields.page_layout_style == 'expanded' %}c10{% else %}c5{% endif %} ct10 cm10 c-wide">
+			<a id="jump-to-form" href="#action-form" class="tablet-hide desktop-hide mobile-hide bg-orange text-underline-none text-center arrow-down text-large2">{% if page.custom_fields.form_submit_button_text %}{{ page.custom_fields.form_submit_button_text }}{% else %}{% filter ak_text:"letter_submit_button" %}Send Your Message{% endfilter %}{% endif %}</a> 
+			{% if page.custom_fields.page_pretitle %}
+			<p id="action-pretitle" class="text-font-secondary"><span class="highlight bg-dkgray-trans">{{ page.custom_fields.page_pretitle }}</span></p>
+			{% endif %}
+			<h2 id="action-title" class="title3">
+			{% if page.custom_fields.page_title_custom_html %}
+				{% autoescape off %} {{ page.custom_fields.page_title_custom_html }} {% endautoescape %}
+			{% else %}
+				<span class="{{ page.custom_fields.page_title_style }}">{{ page.title }}</span>
+			{% endif %}
+			</h2>
+			{% if page.custom_fields.page_author %}
+			<div class="action-author" class="p">
+				{% if page.custom_fields.page_author_image %}<span class="action-author-image"><img src="{{ page.custom_fields.page_author_image }}"></span> {% else %}&mdash; {% endif %}<span class="action-author-text meta">{% autoescape off %}{{ page.custom_fields.page_author }}{% endautoescape %}</span>
+			</div>
+			{% endif %}
+		{% if page.custom_fields.page_layout_style == "expanded" %}
+		</div>
+		{% endif %}
+		
+		
+		<div id="action-description" class="text-large margin-top-none margin-bottom-huge {% if page.custom_fields.page_layout_style == 'expanded' %}c6 ct10 cm10 c-wide{% endif %}" {% if page.custom_fields.page_layout_style == "expanded" %}{% else %}data-readmore-after="{% if page.custom_fields.page_description_readmore %}{{ page.custom_fields.page_description_readmore }}{% else %}2{% endif %}"{% endif %}>
+		{% autoescape off %}
+			{% include_tmpl form.about_text %}
+		{% endautoescape %}
+		</div>
+		{% if page.custom_fields.page_layout_style == "expanded" %}{% else %}
+	</div>
+	{% endif %}
+	{% if page.custom_fields.page_is_inactive %}
+		<div id="page-inactive" class="c5 ct7_5 cm10 c-wide">
+		{% autoescape off %}
+			{{ page.custom_fields.page_is_inactive }}
+		{% endautoescape %}
+		</div>
+	{% else %}
+		<form id="action-form" class="c5 ct7_5 cm10 c-wide form-changeorg form-style-labelabove ak-form action_form" name="act" method="POST" action="/act/" accept-charset="utf-8">
+			{% autoescape off %}
+			<div id="form-intro" class="p text-large text-lineheight-small strong">
+			{% if page.custom_fields.form_text_above_form %}
+				{{ page.custom_fields.form_text_above_form }}
+			{% endif %}
+			{% if form.statement_leadin %}
+				{% include_tmpl form.statement_leadin %}
+			{% else %}
+				{% filter ak_text:"letter_form_intro" %}Personalize your message:{% endfilter %}
+			{% endif %}
+			</div>
+			{% include "./progress_meter.html" %}
+			<div class="input-textarea form-user-comment input-letter margin-bottom-none">
+				<textarea class="letter-text" id="letter-content" name="action_comment">{% include_tmpl form.letter_text  %}</textarea>
+			</div>
+			<p class="text-right text-small margin-top-small"><em>{% filter ak_text:"letter_edit_instructions" %}Click to edit this text.{% endfilter %}</em></p>
+			<input type="hidden" name="utf8" value="&#x2714;">
+			<input type="hidden" name="page" value="{{ page.name }}" />
+			{% include "./user_form_wrapper.html" %}
+			{% endautoescape %}
+			<ul style="display:none;" id="ak-errors"><li></li></ul>
+			{% if page.custom_fields.form_additional_fields %}
+				<div class="form-additional-html">
+					{{ page.custom_fields.form_additional_fields }}
+				</div>	
+			{% endif %}
+			<div class="input-wrapper input-submit">
+				<input type="submit" class="submit" value="{% if page.custom_fields.form_submit_button_text %}{{ page.custom_fields.form_submit_button_text }}{% else %}{% filter ak_text:"letter_submit_button" %}Send Your Message{% endfilter %}{% endif %}" />
+			</div>
+			
+			<div id="action-toc" class="text-small icon-before icon-faded" data-icon="&#xE93E;">
+				{% if page.custom_fields.form_short_toc %}
+					{{ page.custom_fields.form_short_toc }}
+				{% elif page.custom_fields.form_opt_in %}
+					{% filter ak_text:"general_secure_signup" %}350.org respects your privacy.{% endfilter %}
+				{% else %}
+					{% filter ak_text:"general_default_toc" %}350.org will send you updates and notifications when you can make a difference.{% endfilter %}
+				{% endif %}
+			</div>
+		</form>
+		{% include "./social_plugins.html" %}		
+		<div id="recent-actions" class="c6 ct6 cm10 c-wide text-small">
+			{% include "./recentactions.html" %}
+		</div>
+	{% endif %}
+	</div>
+</section>
+{% endblock %}		
