--- a/wrapper.html
+++ b/wrapper.html
@@ -91,7 +91,11 @@
 </head>
 <body class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.iso_code|default:'en-US'}} page-layout-{% if page.custom_fields.page_layout_style %}{{ page.custom_fields.page_layout_style }}{% else %}condensed{% endif %} {% if page.lang.is_rtl %}ak-rtl{% endif %} ak-no-js ">
 {% if page.custom_fields.page_hide_from_search_engines %}
-<div style="color:#fff;background:turquoise;position:fixed;top:0;padding:10px;font-size:18px;font-weight:bold;text-align:center;width:100%;z-index:9999;">This page is currently being hidden from search engines.</div>
+<div id="hidden-from-search-engines-bar" class="section bg-teal text-center text-small padding-tiny width-wide">
+	<div class="section-inner">
+		<p>This page is currently being hidden from search engines.</p>
+	</div>
+</div>
 {% endif %}
 {% include "./language_picker.html" %}
 <script type="text/javascript">actionkit.forms.initPage()</script>
