--- a/letter.html
+++ b/letter.html
@@ -56,9 +56,10 @@
 			</div>
 			{% include "./progress_meter.html" %}
 			<div class="input-textarea form-user-comment input-letter margin-bottom-none">
+				<label for="letter-content" class="hidden">Your message (editable)</label>
 				<textarea class="letter-text" id="letter-content" name="action_comment">{% include_tmpl form.letter_text  %}</textarea>
 			</div>
-			<p class="text-right text-small margin-top-small"><em>{% filter ak_text:"letter_edit_instructions" %}Click to edit this text.{% endfilter %}</em></p>
+			<p class="text-right text-small2 margin-top-small margin-bottom-normal"><em>{% filter ak_text:"letter_edit_instructions" %}You can edit this text to make it personal to you.{% endfilter %}</em></p>
 			<input type="hidden" name="utf8" value="&#x2714;">
 			<input type="hidden" name="page" value="{{ page.name }}" />
 			{% include "./user_form_wrapper.html" %}
