--- a/donate.html
+++ b/donate.html
@@ -38,7 +38,7 @@
 					</div>
 				</div> 
 
-            {% comment %}If "layout" is *not* set to "expanded", end the title <div> here, after the description <div>.{% endfcomment %}
+            {% comment %}If "layout" is *not* set to "expanded", end the title <div> here, after the description <div>.{% endcomment %}
 			{% if page.custom_fields.page_layout_style != 'expanded' %}
 			</div>
             {% endif %}
