updated name of billing info field - donate template

--- a/donate.html
+++ b/donate.html
@@ -298,7 +298,7 @@
                     </div></div>
                     <div id="unknown_user"></div>
 
-                    <h5 class="margin-bottom-normal">{% filter ak_text:"billing_information" %}Billing Information{% endfilter %}</h5>
+                    <h5 class="margin-bottom-normal">{% filter ak_text:"donate_billing_information" %}Billing Information{% endfilter %}</h5>
 
                     <div class="">
                         {% if has_shippable_products %}
