--- a/petition.html
+++ b/petition.html
@@ -31,7 +31,7 @@
 			{% include_tmpl form.about_text %}
 		{% endautoescape %}
 			</div>
-			<div class="hidden">
+			<div class="js-hidden box box-big text-small bg-white">
 				<div id="petition-text">
 	{% if form.statement_leadin %}
 					<div class="petition-target text-large strong p">{% include_tmpl form.statement_leadin %}</div><hr>
@@ -88,7 +88,7 @@
 				{% endif %}
 			</div>
 			{% endif %}
-			<p class="petition-text-link"><a href="" class="js-modal text-small icon-before icon-faded text-underline-none" data-icon="&#xe913;" data-modal-source="#petition-text">{% filter ak_text:'petition_link_text' %}View the full petition text.{% endfilter %}</a></p>
+			<p class="no-js-hidden petition-text-link"><a href="" class="js-modal text-small icon-before icon-faded text-underline-none" data-icon="&#xe913;" data-modal-source="#petition-text">{% filter ak_text:'petition_link_text' %}View the full petition text.{% endfilter %}</a></p>
 			
 		</form>
 		{% include "./social_plugins.html" %}		
