--- a/wrapper.html
+++ b/wrapper.html
@@ -89,7 +89,7 @@
 <![endif]-->
 {% block script_additions %}{% endblock %}
 </head>
-<body class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.iso_code|default:'en-US'}} page-layout-{% if page.custom_fields.page_layout_style %}{{ page.custom_fields.page_layout_style }}{% else %}condensed{% endif %} {% if page.lang.is_rtl %}ak-rtl{% endif %} ak-no-js ">
+<body class="ak-pagetype-{{ filename|split:'.'|nth:0 }} {{ page.type }} {{page.lang.iso_code|default:'en-US'}} page-layout-{% if page.custom_fields.page_layout_style %}{{ page.custom_fields.page_layout_style }}{% else %}condensed{% endif %} {% if page.lang.is_rtl %}ak-rtl{% endif %} no-js ak-no-js ">
 {% if page.custom_fields.page_hide_from_search_engines %}
 <div id="hidden-from-search-engines-bar" class="section bg-teal text-center text-small padding-tiny width-wide">
 	<div class="section-inner">
