--- a/donate.html
+++ b/donate.html
@@ -552,12 +552,19 @@
 		{% else %}
 			<div class="margin-bottom-normal">
 				{% filter ak_text:"donate_footer_text_block" %}
-				<strong class="text-small-caps">Donate by Check:</strong> Make your check payable to <em>350.org</em> and mail it to <em>350.org, 20 Jay St, Suite 732, Brooklyn, NY 11201, USA</em>.</div>
-				<p><strong class="text-small-caps">Other Options:</strong> You can also donate with <a href="https://www.coinbase.com/350org" target="_blank">BitCoin</a>, transfer stock, or include 350.org in your planned giving. <!-- or do <a href="http://350.causevox.com/">peer-to-peer fundraising</a>. --></p>
+					{% if page.payment_processor_information.processor == 'braintree' and page.payment_processor_information.currency == ‘AUD’ %}
+						<p><strong class="text-small-caps">Donate by Cheque:</strong>: Make your cheque payable to <em>350.org</em> and mail it to <em>350.org Limited, 60 Blenheim St, Queens Park, NSW 2002, Australia</em>.</p>
+				<p><strong class="text-small-caps">Contact Us:</strong> Questions? Problems? Please contact us at <a href="mailto:donations@350.org.au?subject=Question%20about%20donation%20to%20350.org%20Australia">donations@350.org.au</a>.</p>
+				<p><strong class="text-small-caps">Update Your Account: </strong>To update your account with a new credit card, new expiration date, or new amount please visit <a href="http://350.org/update">350.org/update</a></p>
+				<p>350.org Limited is a registered Australian charity but donations are NOT tax-deductible in Australia. ABN: 46 138 155 192. Some donations for joint work with our partner organisation Friends of the Earth can be made tax deductible. For information about that, please contact <a href="mailto:andrew.wilcox@350.org.au">andrew.wilcox@350.org.au</a>.</p>
+					{% else %}
+						<p><strong class="text-small-caps">Donate by Check:</strong> Make your check payable to <em>350.org</em> and mail it to <em>350.org, 20 Jay St, Suite 732, Brooklyn, NY 11201, USA</em>.</p>
+						<p><strong class="text-small-caps">Other Options:</strong> You can also donate with <a href="https://www.coinbase.com/350org" target="_blank">BitCoin</a>, transfer stock, or include 350.org in your planned giving. <!-- or do <a href="http://350.causevox.com/">peer-to-peer fundraising</a>. --></p>
 				<p><strong class="text-small-caps">Contact Us:</strong> Questions? Problems? Please contact us at <a href="mailto:donations@350.org?subject=Question%20about%20donation%20to%20350.org">donations@350.org</a>.</p>
 				<p><strong class="text-small-caps">Update Your Account: </strong>To update your account with a new credit card, new expiration date, or new amount please visit <a href="http://350.org/update">350.org/update</a></p>
 				<div style="width:40px;float:left;margin:0 1em 1em 0;"><img src="https://dbqvwi2zcv14h.cloudfront.net/images/350-ak-1pftp-donate-footer.png" alt="1% For The Planet" /></div>
 				<p>350.org is a registered 501c3 non-profit organization and all contributions are tax-deductible in the United States. 350.org's EIN/Tax ID is 26-1150699.</p>	
+					{% endif %}
 				{% endfilter %}
 			</div>
 		{% endif %}
