--- a/donate.html
+++ b/donate.html
@@ -552,7 +552,7 @@
 		{% else %}
 			<div class="margin-bottom-normal">
 					{% if page.payment_processor_information.currency == 'AUD' %}
-						<p><strong class="text-small-caps">Donate by Cheque:</strong>: Make your cheque payable to <em>350.org</em> and mail it to <em>350.org Limited, 60 Blenheim St, Queens Park, NSW 2002, Australia</em>.</p>
+						<p><strong class="text-small-caps">Donate by Cheque</strong>: Make your cheque payable to <em>350.org</em> and mail it to <em>350.org Limited, 60 Blenheim St, Queens Park, NSW 2002, Australia</em>.</p>
 				<p><strong class="text-small-caps">Contact Us:</strong> Questions? Problems? Please contact us at <a href="mailto:donations@350.org.au?subject=Question%20about%20donation%20to%20350.org%20Australia">donations@350.org.au</a>.</p>
 				<p><strong class="text-small-caps">Update Your Account: </strong>To update your account with a new credit card, new expiration date, or new amount please visit <a href="http://350.org/update">350.org/update</a></p>
 				<p>350.org Limited is a registered Australian charity but donations are NOT tax-deductible in Australia. ABN: 46 138 155 192. Some donations for joint work with our partner organisation Friends of the Earth can be made tax deductible. For information about that, please contact <a href="mailto:andrew.wilcox@350.org.au">andrew.wilcox@350.org.au</a>.</p>
