Add c4-compliant option for default "short ToC" text
Making the default "short theory of change" text have a C4-compliant
alternative when the "page – is c4" option is selected

--- a/petition.html
+++ b/petition.html
@@ -83,6 +83,8 @@
 					{{ page.custom_fields.form_short_toc }}
 				{% elif page.custom_fields.form_opt_in %}
 					{% filter ak_text:"general_secure_signup" %}350.org respects your privacy.{% endfilter %}
+				{% elif page.custom_fields.page_is_c4 %}
+					{% filter ak_text:"general_default_toc_c4" %}350 Action will send you updates and notifications when you can make a difference.{% endfilter %}
 				{% else %}
 					{% filter ak_text:"general_default_toc" %}350.org will send you updates and notifications when you can make a difference.{% endfilter %}
 				{% endif %}
